--- a/sanetwork/src/main/AndroidManifest.xml
+++ b/sanetwork/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:allowBackup="true"
         android:label="@string/app_name"
         android:supportsRtl="true">
-        <service android:name="tv.superawesome.lib.sanetwork.asynctask.SAAsyncTask$SAAsync"/>
+        <service android:name="tv.superawesome.lib.sanetwork.asynctask.SAAsyncTask$SAAsync" android:exported="true"/>
     </application>
 
 </manifest>
