--- a/sanetwork/build.gradle
+++ b/sanetwork/build.gradle
@@ -35,7 +35,7 @@ bintray {
     configurations = ['archives']
     pkg {
         repo = "maven"
-        name = "SANetwork"
+        name = "SARequest"
         websiteUrl = siteUrl
         vcsUrl = gitUrl
         licenses = ["Apache-2.0"]
