--- a/sanetwork/src/main/AndroidManifest.xml
+++ b/sanetwork/src/main/AndroidManifest.xml
@@ -7,7 +7,10 @@
         android:allowBackup="true"
         android:label="@string/app_name"
         android:supportsRtl="true">
-        <service android:name="tv.superawesome.lib.sanetwork.asynctask.SAAsyncTask$SAAsync" android:exported="true"/>
+        <service
+            android:name="tv.superawesome.lib.sanetwork.asynctask.SAAsyncTask$SAAsync"
+            android:exported="false"
+            android:permission="tv.superawesome.sdk.SuperAwesomeSDK"/>
     </application>
 
 </manifest>
