--- a/sanetwork/build.gradle
+++ b/sanetwork/build.gradle
@@ -12,12 +12,12 @@ def siteUrl = 'https://github.com/SuperAwesomeLTD/sa-mobile-lib-android-network'
 def gitUrl = 'https://github.com/SuperAwesomeLTD/sa-mobile-lib-android-network.git'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.3"
+    compileSdkVersion 27
+    buildToolsVersion '27.0.3'
 
     defaultConfig {
-        minSdkVersion 11
-        targetSdkVersion 23
+        minSdkVersion 14
+        targetSdkVersion 27
         versionCode 1
         versionName version
     }
@@ -76,4 +76,15 @@ install {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+
+    // tests
+    testImplementation 'junit:junit:4.12'
+    testImplementation "org.mockito:mockito-core:2.+"
+    testImplementation "eu.codearte.catch-exception:catch-exception:1.4.4"
+    testImplementation "org.assertj:assertj-core:3.8.0"
+    testImplementation 'com.squareup.okhttp3:mockwebserver:3.9.1'
+    testImplementation files('libs/json.jar')
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.1', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
 }
