--- a/sanetwork/build.gradle
+++ b/sanetwork/build.gradle
@@ -75,9 +75,8 @@ install {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-
     // tests
+    testImplementation files('libs/json.jar')
     testImplementation 'junit:junit:4.12'
     testImplementation "org.mockito:mockito-core:2.+"
     testImplementation "eu.codearte.catch-exception:catch-exception:1.4.4"
